--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/node": "^10.10.3",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "coveralls": "^3.0.2",
     "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^13.0.1",
     "sinon": "^6.3.4",
     "source-map-support": "^0.5.9",
@@ -55,6 +57,7 @@
   "repository": "github:tslamic/proto-pubsub",
   "scripts": {
     "build": "tsc",
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "lint": "tslint --project tsconfig.json",
     "test": "nyc node_modules/mocha/bin/mocha --require ts-node/register test/**/*.ts"
   },
