--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,10 @@
   },
   "compileOnSave": true,
   "include": [
-    "src"
+    "**/*.ts"
+  ],
+  "exclude": [
+    "**/*.test.ts"
   ],
   "alwaysStrict": true
 }
