Ensure the code coverage tool is including & excluding the appropriate files.

--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
       ".ts"
     ],
     "include": [
-      "src/**/*.ts"
+      "**/*.ts"
+    ],
+    "exclude": [
+      "**/*.test.ts"
     ],
     "instrument": true,
     "reporter": [
